2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/scheduler.py:
	    Add a QueueItem class. We now add OBDData with the same pid
	    to the same QueueItem so we have to query the device only once.

2008-04-16  Ben Van Mechelen  <me@benvm.be>

	* garmon/plugin_manager.py:
        Removed reference to NotebookPlugin

2008-04-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/plugin.py:
	    Removed the NotebookPlugin class

2008-04-15  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	    Removed _update_resize_grip method

2008-04-15  Ben Van Mechelen  <me@benvm.be>

	* TODO.tasks:
	    Removed some completed tasks
